statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: bloodappstatefulset

spec:
  serviceName: mysqldb
  replicas: 1

  selector:
    matchLabels:
      app: app-db

  template:
    metadata:
      labels:
        app: app-db

    spec:
      containers:
      - name: contdb
        image: shaikmustafa/phpapp:dbimage

        ports:
        - containerPort: 3306


        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"

        volumeMounts:
        - name: bloodapppvc
          mountPath: /usr/share/nginx/html/
  volumeClaimTemplates:
  - metadata:
      name: bloodapppvc
    spec:
      accessModes: 
      - ReadWriteOnce
      resources:
        requests:
          storage: 2Gi
