service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: bloodappservice
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
    - port: 80
      targetPort: 80
